add section and border

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="ligth_red2">#D43C3C</color>
     <color name="too_low_red">#F2C7C7</color>
     <color name="too_low_red2">#FCFCFC</color>
+    <color name="ligth_red2_transparent">#79D43C3C</color>
     <color name="hellow_color">#FF9800</color>
 
 
