add date picker

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="blue_transparent2">#793F51B5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="ligth_grey">#948B8B</color>
     <color name="white">#FFFFFFFF</color>
     <color name="ligth_red">#EE2424</color>
     <color name="ligth_red2">#D43C3C</color>
