add phone number and numeric fields

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="teal_200_low_center">#18DECB</color>
 
     <color name="blue_transparent2">#793F51B5</color>
+    <color name="blue">#8999F4</color>
+
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="ligth_grey">#948B8B</color>
